recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: value !=- is not a member of Int
while(steps!=-1){
           ^